objects/AIRPORT__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Airport_City__c</fullName>
        <label>Airport City</label>
        <length>140</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airport_Code__c</fullName>
        <label>Airport Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Airport_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Airport Code</label>
        <referenceTo>Route_FRAs__c</referenceTo>
        <relationshipLabel>AIRPORTS (Destination Airport Code)</relationshipLabel>
        <relationshipName>AIRPORTS1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <referenceTo>Route_FRAs__c</referenceTo>
        <relationshipLabel>AIRPORTS</relationshipLabel>
        <relationshipName>AIRPORTS</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AIRPORT</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AIRPORT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIRPORTS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>